crates/tree-sitter-resin/test/corpus/arguments.txt
==================
Argument lists, tuple values, and function types
==================
type Binary = (int, int) -> int;
type Tuple = ((int, int)) -> int;
type Unit = (()) -> int;
type Zero = () -> int;
def calls() = {
 f(); f(()); f(1,); f((1,)); f(1, 2); f((1, 2));
 f([1, 2]); f({ 1 }); f(1)(2);
 receiver.method(1, 2); receiver.method((1, 2));
 nested.0.1 := nested.1;
};

---

(source_file
  (type_definition
    (type_define
      (uid)
      (type
        (infix_type
          (parameter_types
            (type
              (infix_type
                (union_type
                  (unary_type
                    (primary_type
                      (builtin_type))))))
            (type
              (infix_type
                (union_type
                  (unary_type
                    (primary_type
                      (builtin_type)))))))
          (infix_type
            (union_type
              (unary_type
                (primary_type
                  (builtin_type)))))))))
  (type_definition
    (type_define
      (uid)
      (type
        (infix_type
          (parameter_types
            (type
              (infix_type
                (union_type
                  (unary_type
                    (primary_type
                      (closed_type
                        (tuple_type
                          (type
                            (infix_type
                              (union_type
                                (unary_type
                                  (primary_type
                                    (builtin_type))))))
                          (type
                            (infix_type
                              (union_type
                                (unary_type
                                  (primary_type
                                    (builtin_type))))))))))))))
          (infix_type
            (union_type
              (unary_type
                (primary_type
                  (builtin_type)))))))))
  (type_definition
    (type_define
      (uid)
      (type
        (infix_type
          (parameter_types
            (type
              (infix_type
                (union_type
                  (unary_type
                    (primary_type
                      (closed_type
                        (unit_type))))))))
          (infix_type
            (union_type
              (unary_type
                (primary_type
                  (builtin_type)))))))))
  (type_definition
    (type_define
      (uid)
      (type
        (infix_type
          (parameter_types)
          (infix_type
            (union_type
              (unary_type
                (primary_type
                  (builtin_type)))))))))
  (function_definition
    (lid)
    (block_body
      (statement
        (term
          (assignment_term
            (binary_term
              (unary_term
                (postfix_term
                  (primary_term
                    (lid))
                  (arguments)))))))
      (statement
        (term
          (assignment_term
            (binary_term
              (unary_term
                (postfix_term
                  (primary_term
                    (lid))
                  (arguments
                    (term
                      (assignment_term
                        (binary_term
                          (unary_term
                            (postfix_term
                              (primary_term
                                (closed_term
                                  (unit_term)))))))))))))))
      (statement
        (term
          (assignment_term
            (binary_term
              (unary_term
                (postfix_term
                  (primary_term
                    (lid))
                  (arguments
                    (term
                      (assignment_term
                        (binary_term
                          (unary_term
                            (postfix_term
                              (primary_term
                                (number))))))))))))))
      (statement
        (term
          (assignment_term
            (binary_term
              (unary_term
                (postfix_term
                  (primary_term
                    (lid))
                  (arguments
                    (term
                      (assignment_term
                        (binary_term
                          (unary_term
                            (postfix_term
                              (primary_term
                                (closed_term
                                  (tuple_term
                                    (term
                                      (assignment_term
                                        (binary_term
                                          (unary_term
                                            (postfix_term
                                              (primary_term
                                                (number))))))))))))))))))))))
      (statement
        (term
          (assignment_term
            (binary_term
              (unary_term
                (postfix_term
                  (primary_term
                    (lid))
                  (arguments
                    (term
                      (assignment_term
                        (binary_term
                          (unary_term
                            (postfix_term
                              (primary_term
                                (number)))))))
                    (term
                      (assignment_term
                        (binary_term
                          (unary_term
                            (postfix_term
                              (primary_term
                                (number))))))))))))))
      (statement
        (term
          (assignment_term
            (binary_term
              (unary_term
                (postfix_term
                  (primary_term
                    (lid))
                  (arguments
                    (term
                      (assignment_term
                        (binary_term
                          (unary_term
                            (postfix_term
                              (primary_term
                                (closed_term
                                  (tuple_term
                                    (term
                                      (assignment_term
                                        (binary_term
                                          (unary_term
                                            (postfix_term
                                              (primary_term
                                                (number)))))))
                                    (term
                                      (assignment_term
                                        (binary_term
                                          (unary_term
                                            (postfix_term
                                              (primary_term
                                                (number))))))))))))))))))))))
      (statement
        (term
          (assignment_term
            (binary_term
              (unary_term
                (postfix_term
                  (primary_term
                    (lid))
                  (arguments
                    (term
                      (assignment_term
                        (binary_term
                          (unary_term
                            (postfix_term
                              (primary_term
                                (closed_term
                                  (array_term
                                    (term
                                      (assignment_term
                                        (binary_term
                                          (unary_term
                                            (postfix_term
                                              (primary_term
                                                (number)))))))
                                    (term
                                      (assignment_term
                                        (binary_term
                                          (unary_term
                                            (postfix_term
                                              (primary_term
                                                (number))))))))))))))))))))))
      (statement
        (term
          (assignment_term
            (binary_term
              (unary_term
                (postfix_term
                  (primary_term
                    (lid))
                  (arguments
                    (term
                      (assignment_term
                        (binary_term
                          (unary_term
                            (postfix_term
                              (primary_term
                                (closed_term
                                  (chain_term
                                    (term
                                      (assignment_term
                                        (binary_term
                                          (unary_term
                                            (postfix_term
                                              (primary_term
                                                (number))))))))))))))))))))))
      (statement
        (term
          (assignment_term
            (binary_term
              (unary_term
                (postfix_term
                  (primary_term
                    (lid))
                  (arguments
                    (term
                      (assignment_term
                        (binary_term
                          (unary_term
                            (postfix_term
                              (primary_term
                                (number))))))))
                  (arguments
                    (term
                      (assignment_term
                        (binary_term
                          (unary_term
                            (postfix_term
                              (primary_term
                                (number))))))))))))))
      (statement
        (term
          (assignment_term
            (binary_term
              (unary_term
                (postfix_term
                  (primary_term
                    (lid))
                  (method_call
                    (lid)
                    (arguments
                      (term
                        (assignment_term
                          (binary_term
                            (unary_term
                              (postfix_term
                                (primary_term
                                  (number)))))))
                      (term
                        (assignment_term
                          (binary_term
                            (unary_term
                              (postfix_term
                                (primary_term
                                  (number)))))))))))))))
      (statement
        (term
          (assignment_term
            (binary_term
              (unary_term
                (postfix_term
                  (primary_term
                    (lid))
                  (method_call
                    (lid)
                    (arguments
                      (term
                        (assignment_term
                          (binary_term
                            (unary_term
                              (postfix_term
                                (primary_term
                                  (closed_term
                                    (tuple_term
                                      (term
                                        (assignment_term
                                          (binary_term
                                            (unary_term
                                              (postfix_term
                                                (primary_term
                                                  (number)))))))
                                      (term
                                        (assignment_term
                                          (binary_term
                                            (unary_term
                                              (postfix_term
                                                (primary_term
                                                  (number)))))))))))))))))))))))
      (statement
        (term
          (assignment_term
            (binary_term
              (unary_term
                (postfix_term
                  (primary_term
                    (lid))
                  (field_access
                    (tuple_index))
                  (field_access
                    (tuple_index)))))
            (assignment_term
              (binary_term
                (unary_term
                  (postfix_term
                    (primary_term
                      (lid))
                    (field_access
                      (tuple_index))))))))))))
