crates/tree-sitter-resin/test/corpus/conditionals.txt
==================
Else if chain with a final else
==================
fn f()  { if (a) {} else if (b) {} else if (c) {} else {} }
---

(source_file
  (function_definition
    (lid)
    (block_body
      (term
        (assignment_term
          (binary_term
            (unary_term
              (postfix_term
                (primary_term
                  (if_term
                    (term
                      (assignment_term
                        (binary_term
                          (unary_term
                            (postfix_term
                              (primary_term
                                (lid)))))))
                    (closed_term
                      (unit_term))
                    (if_term
                      (term
                        (assignment_term
                          (binary_term
                            (unary_term
                              (postfix_term
                                (primary_term
                                  (lid)))))))
                      (closed_term
                        (unit_term))
                      (if_term
                        (term
                          (assignment_term
                            (binary_term
                              (unary_term
                                (postfix_term
                                  (primary_term
                                    (lid)))))))
                        (closed_term
                          (unit_term))
                        (closed_term
                          (unit_term))))))))))))))

==================
Else if chain without a final else
==================
fn f()  { if (a) {} else if (b) {} }
---

(source_file
  (function_definition
    (lid)
    (block_body
      (term
        (assignment_term
          (binary_term
            (unary_term
              (postfix_term
                (primary_term
                  (if_term
                    (term
                      (assignment_term
                        (binary_term
                          (unary_term
                            (postfix_term
                              (primary_term
                                (lid)))))))
                    (closed_term
                      (unit_term))
                    (if_term
                      (term
                        (assignment_term
                          (binary_term
                            (unary_term
                              (postfix_term
                                (primary_term
                                  (lid)))))))
                      (closed_term
                        (unit_term)))))))))))))

==================
Nested conditional keeps its own else
==================
fn f()  { if (a) { if (b) {} else if (c) {} else {} } else if (d) {} else {} }
---

(source_file
  (function_definition
    (lid)
    (block_body
      (term
        (assignment_term
          (binary_term
            (unary_term
              (postfix_term
                (primary_term
                  (if_term
                    (term
                      (assignment_term
                        (binary_term
                          (unary_term
                            (postfix_term
                              (primary_term
                                (lid)))))))
                    (closed_term
                      (chain_term
                        (term
                          (assignment_term
                            (binary_term
                              (unary_term
                                (postfix_term
                                  (primary_term
                                    (if_term
                                      (term
                                        (assignment_term
                                          (binary_term
                                            (unary_term
                                              (postfix_term
                                                (primary_term
                                                  (lid)))))))
                                      (closed_term
                                        (unit_term))
                                      (if_term
                                        (term
                                          (assignment_term
                                            (binary_term
                                              (unary_term
                                                (postfix_term
                                                  (primary_term
                                                    (lid)))))))
                                        (closed_term
                                          (unit_term))
                                        (closed_term
                                          (unit_term))))))))))))
                    (if_term
                      (term
                        (assignment_term
                          (binary_term
                            (unary_term
                              (postfix_term
                                (primary_term
                                  (lid)))))))
                      (closed_term
                        (unit_term))
                      (closed_term
                        (unit_term)))))))))))))
