crates/tree-sitter-resin/test/corpus/inference.txt
==================
Nested explicit inference holes
==================
fn choose(p: Ptr<i32>) -> (Ptr<_>, (i32) -> _)  {
    let mut output: Ptr<Ptr<_>>;
    (p, f)
}
---

(source_file
  (function_definition
    (lid)
    (parameter
      (binding_pattern
        (lid))
      (type
        (infix_type
          (union_type
            (unary_type
              (type
                (infix_type
                  (union_type
                    (unary_type
                      (primary_type
                        (builtin_type)))))))))))
    (type
      (infix_type
        (union_type
          (unary_type
            (primary_type
              (closed_type
                (tuple_type
                  (type
                    (infix_type
                      (union_type
                        (unary_type
                          (type
                            (infix_type
                              (union_type
                                (unary_type
                                  (primary_type
                                    (inferred_type))))))))))
                  (type
                    (infix_type
                      (parameter_types
                        (type
                          (infix_type
                            (union_type
                              (unary_type
                                (primary_type
                                  (builtin_type)))))))
                      (infix_type
                        (union_type
                          (unary_type
                            (primary_type
                              (inferred_type))))))))))))))
    (block_body
      (statement
        (parameter
          (binding_pattern
            (lid))
          (type
            (infix_type
              (union_type
                (unary_type
                  (type
                    (infix_type
                      (union_type
                        (unary_type
                          (type
                            (infix_type
                              (union_type
                                (unary_type
                                  (primary_type
                                    (inferred_type))))))))))))))))
      (term
        (assignment_term
          (binary_term
            (unary_term
              (postfix_term
                (primary_term
                  (closed_term
                    (tuple_term
                      (term
                        (assignment_term
                          (binary_term
                            (unary_term
                              (postfix_term
                                (primary_term
                                  (lid)))))))
                      (term
                        (assignment_term
                          (binary_term
                            (unary_term
                              (postfix_term
                                (primary_term
                                  (lid))))))))))))))))))

==================
Underscores in identifiers are not holes
==================
type _Name = i32;
fn _name(_value: _Name) -> _Name  { _value }
---

(source_file
  (type_definition
    (type_define
      (uid)
      (type
        (infix_type
          (union_type
            (unary_type
              (primary_type
                (builtin_type))))))))
  (function_definition
    (lid)
    (parameter
      (binding_pattern
        (lid))
      (type
        (infix_type
          (union_type
            (unary_type
              (primary_type
                (uid)))))))
    (type
      (infix_type
        (union_type
          (unary_type
            (primary_type
              (uid))))))
    (block_body
      (term
        (assignment_term
          (binary_term
            (unary_term
              (postfix_term
                (primary_term
                  (lid))))))))))
