crates/tree-sitter-resin/test/corpus/literals.txt
==================
Numeric suffixes and one-armed if
==================
def main() = { var a = 42_ul; var b = -42_l; var c = 1.5_f; var d = 0xff_ui; if (a > 0_ul) { if (b < 0_l) {} else {}; }; };
---

(source_file
  (function_definition
    (lid)
    (block_body
      (statement
        (define
          (term_define
            (lid)
            (term
              (assignment_term
                (binary_term
                  (unary_term
                    (postfix_term
                      (primary_term
                        (number))))))))))
      (statement
        (define
          (term_define
            (lid)
            (term
              (assignment_term
                (binary_term
                  (unary_term
                    (unary_term
                      (postfix_term
                        (primary_term
                          (number)))))))))))
      (statement
        (define
          (term_define
            (lid)
            (term
              (assignment_term
                (binary_term
                  (unary_term
                    (postfix_term
                      (primary_term
                        (number))))))))))
      (statement
        (define
          (term_define
            (lid)
            (term
              (assignment_term
                (binary_term
                  (unary_term
                    (postfix_term
                      (primary_term
                        (number))))))))))
      (statement
        (term
          (assignment_term
            (binary_term
              (unary_term
                (postfix_term
                  (primary_term
                    (if_term
                      (term
                        (assignment_term
                          (binary_term
                            (binary_term
                              (unary_term
                                (postfix_term
                                  (primary_term
                                    (lid)))))
                            (binary_term
                              (unary_term
                                (postfix_term
                                  (primary_term
                                    (number))))))))
                      (closed_term
                        (chain_term
                          (statement
                            (term
                              (assignment_term
                                (binary_term
                                  (unary_term
                                    (postfix_term
                                      (primary_term
                                        (if_term
                                          (term
                                            (assignment_term
                                              (binary_term
                                                (binary_term
                                                  (unary_term
                                                    (postfix_term
                                                      (primary_term
                                                        (lid)))))
                                                (binary_term
                                                  (unary_term
                                                    (postfix_term
                                                      (primary_term
                                                        (number))))))))
                                          (closed_term
                                            (unit_term))
                                          (closed_term
                                            (unit_term)))))))))))))))))))))))

==================
String literal type and explicit byte view
==================
def text(value: str) -> str = { value };
def bytes() -> Span<ubyte> = { Span<ubyte>("hello") };
---

(source_file
  (function_definition
    (lid)
    (declare
      (lid)
      (type
        (infix_type
          (union_type
            (unary_type
              (primary_type
                (builtin_type)))))))
    (type
      (infix_type
        (union_type
          (unary_type
            (primary_type
              (builtin_type))))))
    (block_body
      (term
        (assignment_term
          (binary_term
            (unary_term
              (postfix_term
                (primary_term
                  (lid)))))))))
  (function_definition
    (lid)
    (type
      (infix_type
        (union_type
          (unary_type
            (type
              (infix_type
                (union_type
                  (unary_type
                    (primary_type
                      (builtin_type))))))))))
    (block_body
      (term
        (assignment_term
          (binary_term
            (unary_term
              (postfix_term
                (primary_term
                  (unary_type
                    (type
                      (infix_type
                        (union_type
                          (unary_type
                            (primary_type
                              (builtin_type))))))))
                (arguments
                  (term
                    (assignment_term
                      (binary_term
                        (unary_term
                          (postfix_term
                            (primary_term
                              (string))))))))))))))))
