crates/tree-sitter-resin/test/corpus/loops.txt
==================
Empty while
==================
def main() -> () = { while (1 == 0) {}; };
---

(source_file
  (function_definition
    (lid)
    (type
      (infix_type
        (union_type
          (unary_type
            (primary_type
              (closed_type
                (unit_type)))))))
    (block_body
      (statement
        (term
          (assignment_term
            (binary_term
              (unary_term
                (postfix_term
                  (primary_term
                    (while_term
                      (term
                        (assignment_term
                          (binary_term
                            (binary_term
                              (unary_term
                                (postfix_term
                                  (primary_term
                                    (number)))))
                            (binary_term
                              (unary_term
                                (postfix_term
                                  (primary_term
                                    (number))))))))
                      (block_body))))))))))))

==================
Nested while and a statement-only body
==================
def main () -> () = {
    var n = 0;
    while (n < 3) {
        while (n < 2) { n := n + 1; };
        n := n + 1;
    };
};
---
